Updated an element and class names

--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 <body>
     <main>
         <div>
-            <h1>Creating a </h1>
-            <h1>random password</h1>
+            <h1>Generate a </h1>
+            <h1><span class="text-light-green">random password</span></h1>
             <h4>Never use an insecure password again</h4>
         </div>
 
         <div class="password-section">
-            <button class="btn-password-style"> Generate password</button>
+            <button class="btn-generate-style"> Generate password</button>
+            <div class="border-bottom-line"></div>
             <div class="generated-passwords">
-                <p class="text-password-style">t55t5</p>
-                <p>rf45654</p>
+                <button class="btn-pw-result-style text-drk-green ">t55t5</button>
+                <button class="password-result-style text-drk-green ">rf45654</button>
             </div>
         </div>
         
