Adding & updating class name

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <main>
-        <div>
+        <div class="text-section">
             <h1>Generate a </h1>
             <h1><span class="text-light-green">random password</span></h1>
             <h4>Never use an insecure password again</h4>
         </div>
 
         <div class="password-section">
-            <button class="btn-generate-style"> Generate password</button>
+            <button class="btn-generate-style">Generate passwords</button>
             <div class="border-bottom-line"></div>
             <div class="generated-passwords">
-                <button class="btn-pw-result-style text-drk-green ">t55t5</button>
-                <button class="password-result-style text-drk-green ">rf45654</button>
+                <button class="pw-result-style text-drk-green ">>nfJjy!dDvR&ial</button>
+                <button class="pw-result-style text-drk-green ">egxWij@veiPUwKe</button>
             </div>
         </div>
         
