Add id and onclick event

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         </div>
 
         <div class="password-section">
-            <button class="btn-generate-style">Generate passwords</button>
+            <button onclick="generatePw()" class="btn-generate-style btn">Generate passwords</button>
             <div class="border-bottom-line"></div>
             <div class="generated-passwords">
-                <button class="pw-result-style text-drk-green ">>nfJjy!dDvR&ial</button>
-                <button class="pw-result-style text-drk-green ">egxWij@veiPUwKe</button>
+                <button id="pw-a" class="pw-result-style text-drk-green ">>nfJjy!dDvR&ial</button>
+                <button id="pw-b" class="pw-result-style text-drk-green ">egxWij@veiPUwKe</button>
             </div>
         </div>
         
