--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
 
         <div class="password-section">
             <button onclick="generatePw()" class="btn-generate-style btn">Generate passwords</button>
-            <div class="range-slider-container">
-                <input type="range" class="range" id="pw-length-input"
-                        min="5" max="15" >
-                <output class="bubble"></output>
-
-            </div>
+            <div class="range-container">
+                <input type="range" class="range" id="range-slider" min="7" max="64" > <!-- onchange="getFinalval(this.value)" -->
+                <input type="text" class="range-text" id="range-input" value="">
+              </div>
             
             <div class="border-bottom-line"></div>
             <div class="generated-passwords">
