--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="password-section">
             <button onclick="generatePw()" class="btn-generate-style btn">Generate passwords</button>
             <div class="range-container">
-                <input type="range" class="range" id="range-slider" min="7" max="64" > <!-- onchange="getFinalval(this.value)" -->
+                <input type="range" class="range" id="range-slider" min="7" max="64" > 
                 <input type="text" class="range-text" id="range-input" value="">
               </div>
             
