add onclick event to the password text

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             
             <div class="border-bottom-line"></div>
             <div class="generated-passwords">
-                <button id="pw-a" class="pw-result-style text-drk-green ">nfJjy!dDvR&ial</button>
-                <button id="pw-b" class="pw-result-style text-drk-green ">egxWij@veiPUwKe</button>
+                <button id="pw-a" class="pw-result-style text-drk-green" onclick="copyPwText()" >nfJjy!dDvR&ial</button>
+                <button id="pw-b" class="pw-result-style text-drk-green" onclick="copyPwText()" >egxWij@veiPUwKe</button>
             </div>
         </div>
         
