--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button id="generate-pw" class="btn-generate-style btn">Generate passwords</button> <!-- onclick="generatePw()"-->
             <div class="range-container">
                 <input type="range" class="range" id="range-slider" min="7" max="64" > 
-                <input type="text" class="range-text" id="range-input" value="">
+                <span type="text" class="range-text" id="range-input">16</span> 
             </div>
 
             <div class="toggle-container">
@@ -27,7 +27,7 @@
                     <input id="symbol-chkbox" type="checkbox" class="check-box">
                     <span class="slider round"></span>                    
                 </label>
-                
+
                 <span>Exclude numbers</span>
                 <label class="switch toggle-numbers">
                     <input id="num-chkbox" type="checkbox" class="check-box"> <!--onclick="excludeNum()"-->
